added ai python server

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Server"]
 	path = Server
 	url = https://github.com/MaM00d/wanasserver.git
+[submodule "Ai/AiServer"]
+	path = Ai/AiServer
+	url = https://github.com/MaM00d/wanaai.git
