--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_DB: 'wanas'
       DB_HOST: '127.0.0.1'
   ai:
-    build: ./Ai/AiServer/
+    build: ./wannai/
     ports:
       - '12345:1235/tcp'
   server:
